# file(GLOB_RECURSE HEADER_FILES "*.h")
# file(GLOB_RECURSE CC_FILES "*.cc" "*.cpp")


# add_library (test_jsonpb STATIC ${HEADER_FILES} ${CC_FILES})

# target_compile_features(test_jsonpb PRIVATE cxx_std_17)

# target_link_libraries(test_jsonpb PRIVATE libjsonpb)

# target_include_directories(test_jsonpb
#     PUBLIC
#         ${PROJECT_SOURCE_DIR}/
# )
